@@ -1,3 +1,9 @@
+2008-09-28  Brian Curry  <http://www.raiazome.com/Brian_Curry>
+
+	* modules/footnotes.pl: Refactored. Yet another flashy rewrite; it
+	improves integration with "toc.pl", and provides improved HTML
+	configurability, CSS styleability, and perldoc-style documentation.
+
 2008-09-22  Brian Curry  <http://www.raiazome.com/Brian_Curry>
 
 	* modules/smarttitles.pl: Refactored. This is a flashy rewrite; it
